# carvel-backend

./: .env  Learning Engine.docx  extract_item_codes.py  main.py  migrate_appetizer_scenario.py  migrate_menu_items.py  pyproject.toml  requirements.txt  seed_staff.py
app/cal/: calculation_requests_routes.py  calculation_requests_schema.py  calculation_results_schema.py  calculation_results_service.py
app/core/: constants.py  database.py
app/routes/: actual_order_outcomes_routes.py  auth_routes.py  calculation_results_routes.py  excel_import_routes.py  learning_cycle_config_routes.py  menu_item_rules_routes.py  override_approvals_routes.py  override_requests_routes.py  rule_multipliers_routes.py  rule_recommendations_routes.py  rule_versions_routes.py
app/schemas/: actual_order_outcomes.py  calculation_results.py  excel_import_jobs.py  learning_cycle_config.py  menu_item_rules.py  override_approvals.py  override_requests.py  rule_multipliers.py  rule_recommendations.py  rule_versions.py
app/services/: actual_order_outcomes_service.py  calculation_requests_service.py  calculation_results_service.py  excel_import_jobs_service.py  import_service.py  learning_cycle_config_service.py  menu_item_rules_service.py  override_approvals_service.py  override_requests_service.py  rule_multipliers_service.py  rule_recommendations_service.py  rule_versions_service.py
app/utils/: excel_parser.py
uploads/: rest_001_Traywise v 2.xlsx  rest_001_combo_app_veg and non_veg_combo_spread.xlsx
