[project]
name = "carvel-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler",
    "bcrypt>=5.0.0",
    "fastapi==0.109.0",
    "httpx>=0.28.1",
    "motor==3.3.2",
    "openpyxl>=3.0.10",
    "pandas>=1.5.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "pyjwt>=2.12.1",
    "pymongo==4.6.1",
    "python-dotenv==1.0.0",
    "python-multipart>=0.0.22",
    "uvicorn==0.27.0",
]
